# datalad-file-tracker

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.gitlab/: checks.gitlab-ci.yml  dependabot.yml  env_setup.yml  push.gitlab-ci.yml
doc/source/: Doxyfile  docgen.sh
docs/source/: Doxyfile  docgen.sh
src/: __init__.py  fileWorkflow.py  graphAbs.py  graphProvDB.py  jobstore.sqlite  main.py  nodeWorkflow.py  p1.py  pft.py  stmlt-pft-fp.py  stmlt-pft.py  stmlt_agb.py  stmlt_agb_tasks.py  stmlt_pft.py  stmlt_pft_fp.py  stmlt_proc_prov.py  stmlt_proc_prov_tasks.py  stmlt_proc_prov_tasks_gce.py  taskWorkflow.py
src/graphs/: __init__.py  fileWorkflow.py  file_workflow.py  graph_abstract.py  graph_analysis.py  graph_base.py  graph_base_tasks.py  graph_gen.py  graph_plot.py  graph_provenance.py  graph_provenance_tasks.py  graph_utils.py  graphs_text.py  nodeWorkflow.py  node_workflow.py  taskWorkflow.py  task_workflow.py
src/import_export/: __init__.py  code_generation.py  graph_export.py  translation_file_read.py
src/match/: __init__.py  difference.py
src/utilities/: __init__.py  base_conversions.py  git_utils.py  globus.py  jobs.py  notes.py  paths_check.py  paths_utils.py  string_manip.py
src/utils/: __init__.py  encode.py  filenote.py  get_git_root.py  git_utils.py  graph_analysis.py  graph_gen.py  graph_plot.py  is_tool.py  job_submit.py  jobs.py  line_process.py  notes.py  paths_check.py  plotnotes.py  remove_space.py  string_manip.py
tests/: datalad-102-text  test-agb.py  test-pft-fp.py
