
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PFT"
version = "0.0.1"
authors = [
    { name="Pedro Martinez", email="pemartin@ucalgary.ca" },
]
description = "Datalad file tracker."
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"wtu" = ["py.typed"]

[project.scripts]
